# BlockID

./: Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json
scripts/: deploy-issuer-canister.sh  deploy-validate-canister.sh  deploy.sh  did.sh  set-env.sh  set-validate-config.sh
src/BlockID_frontend/: package.json
src/BlockID_frontend/src/: App.vue
src/backend/: Provider.mo  Types.mo  Utils.mo  main.mo  simulator.mo
src/backend/Utils/: CRC32.mo  SHA224.mo
src/backend/providers/: nft-ext-v1.mo
src/backend/providers/ledger/: indexTypes.mo  transaction.mo
src/backend/providers/nns/: nns.mo
src/backend/providers/types/: governanceType.mo
src/frontend/: index.html  package.json  tsconfig.json  vite.config.js
src/frontend/public/: index.html
src/frontend/public/.well-known/: ic-domains  ii-alternative-origins
src/frontend/src/: App.vue  config.js  main.js
src/frontend/src/actor/: Actor.js  BaseActor.js  Connect.js  didList.js  pnp.js
src/frontend/src/components/: Alert.vue  AlertDialog.vue  ConfirmDialog.vue  DialogManager.vue  (+7 more)
src/marketplace/: main.mo
src/marketplace/approved/: nftChecker.mo
src/marketplace/templates/: BaseProvider.mo
src/rust/: README.md
src/rust/issuer/: Cargo.toml  README.md  build.sh  issuer.did
src/rust/validate/: Cargo.toml  README.md  build.sh  validate.did
src/rust/validate/src/: lib.rs
src/sdk/: .npmignore  README.md  package-lock.json  package.json  tsconfig.json
src/sdk/examples/: basic-usage.ts
src/sdk/src/: blockid-sdk.ts  index.ts  types.ts
src/whitelist/: main.mo
(+80 files in other folders)
